--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
-  "printWidth": 100,
-  "jsxBracketSameLine": false,
+  "printWidth": 120,
+  "tabWidth": 4,
+  "semi": false,
   "singleQuote": true,
-  "tabWidth": 2,
-  "trailingComma": "es5"
+  "trailingComma": "all",
+  "jsxBracketSameLine": true,
+  "bracketSpacing": true
 }
