--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,10 +14,15 @@
         }
     },
     "rules": {
-        "react/prop-types": 0,
-        "react/react-in-jsx-scope": "off",
         "lines-between-class-members": ["error", "always"],
-        "padding-line-between-statements": 0
+        "padding-line-between-statements": 0,
+
+        "import/no-unresolved": 0,
+
+        "no-unused-vars": 0,
+
+        "react/prop-types": 0,
+        "react/react-in-jsx-scope": "off"
     },
     "parser": "babel-eslint",
     "parserOptions": {
